syntax = "proto3";

option go_package = "genproto/auth";

package auth;

message ById {
    string id = 1;
}

message Filter {
    int32 limit = 1;
    int32 offset = 2;
}

message Void{}

message TokenRes{
    string id = 1;
    string access_token = 2;
    string refresh_token = 3;
}